[Core] Fix the filter menu layout on mobile devices.

--- a/core-bundle/src/Resources/contao/themes/flexible/src/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/src/main.css
@@ -1705,7 +1705,7 @@ fieldset.collapsed > legend {
 		position:relative;
 		padding:3px 6px;
 	}
-	.styled_select_wrapper {
+	.tl_filter .styled_select_wrapper {
 		display:block;
 	}
 	.tl_filter strong {
